--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,6 @@ android.enableResourceOptimizations=true
 
 #https://chromiumdash.appspot.com/releases?platform=Android
 CronetVersion=99.0.4844.58
+
+# fix bug: Installation failed due to: 'INSTALL_FAILED_TEST_ONLY'
+android.injected.testOnly=false
