--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,7 @@ android.enableResourceOptimizations=true
 
 #https://chromiumdash.appspot.com/releases?platform=Android
 CronetVersion=99.0.4844.88
+
+
+# fix bug: Installation failed due to: 'INSTALL_FAILED_TEST_ONLY'
+android.injected.testOnly=false
